--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -14,7 +14,8 @@ jobs:
     - name: Compile LaTeX document
       run: |
         pdflatex All.tex
-        bibtex All
+        biber --output_format=bibtex --output_resolve All.bcf
+        biber All
         pdflatex All.tex
         pdflatex All.tex
 
