Remove the cache

--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -1,3 +1,4 @@
+
 name: Compile All.tex LaTeX Document
 on: push
 
@@ -8,24 +9,10 @@ jobs:
     - name: Set up Git repository
       uses: actions/checkout@v2
 
-    - name: Cache LaTeX packages
-      uses: actions/cache@v2
-      with:
-        path: |
-          /var/cache/apt
-          /var/lib/apt/lists
-        key: ${{ runner.os }}-apt-cache-${{ hashFiles('**/*.tex') }}
-        restore-keys: |
-          ${{ runner.os }}-apt-cache-
-
-    - name: Install LaTeX
+    - name: Install LaTeX full
       run: |
-        if [ ! -f "/var/cache/apt/archives/lock" ]; then
-          sudo apt-get update
-          sudo apt-get install -y texlive-full
-        else
-          echo "LaTeX packages are cached."
-        fi
+        sudo apt-get update
+        sudo apt-get install -y texlive-full
 
     - name: Compile LaTeX document
       run: |
