--- a/Build_docs/Makefile
+++ b/Build_docs/Makefile
@@ -6,13 +6,20 @@
 SPHINXOPTS    ?=
 SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = .
-BUILDDIR      = _build
+BUILDDIR      = ../../SPPDs-Bib-Docs
 
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 .PHONY: help Makefile
+
+# Add new deploy target
+deploy:
+	cd $(DESTPATH) && git add . && git commit -m "Update documentation"
+
+# New target that combines html and deploy
+html-and-deploy: html deploy
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
