fix(Makefile): correct variable name from GH-PageDIR to GHPAGEDIR for consistency chore(Makefile): update deploy command to use 'oco --yes' for committing changes
The variable name GH-PageDIR is corrected to GHPAGEDIR to maintain a consistent naming convention. The deploy command is updated to use 'oco --yes' instead of a manual commit message, streamlining the process of committing changes to the documentation. This change enhances readability and reduces the potential for errors in the deployment process.

--- a/Build_docs/Makefile
+++ b/Build_docs/Makefile
@@ -8,7 +8,7 @@ SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = .
 BUILDDIR      = ../../SPPDs-Bib-Docs
 DESTPATH      = $(BUILDDIR)/html/
-GH-PageDIR    = ../../SPDEs-Bib-Docs/
+GHPAGEDIR     = ../../SPDEs-Bib-Docs/
 
 # Put it first so that "make" without argument is like "make help".
 help:
@@ -18,8 +18,8 @@ help:
 
 # Add new deploy target
 deploy:
-	rsync -av --delete --exclude='.*' "$(DESTPATH)" "$(GH-PageDIR)"
-	cd "$(GH-PageDir)" && git add . && git commit -m "Update documentation"
+	rsync -av --delete --exclude='.*' "$(DESTPATH)" "$(GHPAGEDIR)"
+	cd "$(GHPAGEDIR)" && git add . && oco --yes && git push
 
 
 # New target that combines html and deploy
