fix(Makefile): update deploy target to use git diff-index for conditional commits
The deploy target now uses `git diff-index` to check for changes before
staging and committing files. This prevents unnecessary commits when
there are no changes. The previous command using `oco` was commented out
and replaced with a more explicit commit message for documentation
updates. This change improves the efficiency and clarity of the deploy
process by ensuring only meaningful updates are committed.

--- a/Build_docs/Makefile
+++ b/Build_docs/Makefile
@@ -19,7 +19,8 @@ help:
 # Add new deploy target
 deploy:
 	rsync -av --delete --exclude='.*' "$(DESTPATH)" "$(GHPAGEDIR)"
-	cd "$(GHPAGEDIR)" && git add . && oco --yes && git push
+	# cd "$(GHPAGEDIR)" && git add . && opencommit --yes && git push
+	cd "$(GHPAGEDIR)" && git diff-index --quiet HEAD || (git add . && git commit -m "docs: update Sphinx documentation build" && git push)
 
 
 # New target that combines html and deploy
