--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,36 +5,36 @@ on:
   push:
     branches:
       - main
-# This job installs dependencies, build the book, and pushes it to `gh-pages`
+  # Allow manual trigger
+  workflow_dispatch:
+
+# This job installs dependencies, builds the docs, and pushes to `gh-pages`
 jobs:
   build-and-deploy-book:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     permissions:
       contents: write
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        python-version: [3.9]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     # Install dependencies
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.12'
+        
     - name: Install dependencies
       run: |
         pip install -r Build_docs/requirements.txt
+        
     # Build the book
     - name: Build the book
       run: |
         cd Build_docs && make html
 
-
     # Deploy the book's HTML to gh-pages branch
     - name: GitHub Pages action
-      uses: peaceiris/actions-gh-pages@v3.6.1
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./Build_docs/_build/html
