--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,14 +26,18 @@ jobs:
 
     - name: Regenerate RST files from All.bib
       run: |
-        cd Build_docs && python3 Bibtexparser-all.py --fast
+        cd Build_docs
+        rm -rf bib_entries/*.rst bib_files/*.bib
+        python3 Bibtexparser-all.py
 
-    - name: Build HTML (suppress warnings)
+    - name: Build HTML
       run: |
-        cd Build_docs && sphinx-build -b html -q . _build/html
+        cd Build_docs
+        sphinx-build -b html -Q . _build/html 2>/dev/null || sphinx-build -b html . _build/html
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./Build_docs/_build/html
+        force_orphan: true
