--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,16 @@ jobs:
       with:
         python-version: '3.12'
 
+    - name: Set up Node.js (for bibtex-tidy)
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
     - name: Install dependencies
       run: |
         pip install -r Build_docs/requirements.txt
         pip install bibtexparser
+        npm install -g bibtex-tidy
 
     - name: Regenerate RST files from All.bib
       run: |
